Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.11.1
-
Fix Version/s: 5.12.0 Beta 3
-
Component/s: QML: Declarative and Javascript Engine
-
Labels:
-
Platform/s:
-
Commits:67fbdadb3ba1aa9f86ae2d6ca3bff69479fb12be
Description
When calling QJSEngine::evaluate() with an absolute file path that contains a drive letter, it will be unable to determine the context for qsTr calls. This is due to the fact that QUrl(absoluteFilePathWithDrive) is not seeing this as a valid url unless it has "file://" prepended to it. As a result all calls to qsTr() will not trigger a translation as it cannot match the context.